# rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app_config.yml  chunks.py  db.py  docker-compose.yml  docker_quickstart.sh  env.py  llm.py  logger.py  pyproject.toml  rag_langchain.py  rag_llamaindex.py  requirements.txt  semantic_search.py  start.sh  utils.py
.github/: copilot-instructions.md
data/: interstellar.txt
docs/: cellartracker-import.md  cellartracker-quickstart.md  pour-decisions-rag-pipeline.md  quick-reference.md  rag-pipeline.md
scripts/: chroma_quickstart.py  rag_quickstart.py
src/agents/: __init__.py  keyword_agent.py  keyword_quickstart.py  llm.py  rag_main.py  wine_agent.py  wine_agent_quickstart.py
src/agents/intelligent/: agent.py  agent_quickstart.py
src/agents/keyword/: agent.py  agent_quickstart.py
src/agents/prompts/: intelligent_agent_system_prompt.md  keyword_agent_generation_prompt.md  rag_only_system_prompt.md  rag_only_user_prompt.md
src/agents/tools/: __init__.py  cellar_tools.py  pairing_tools.py  rag_tools.py  taste_profile_tools.py  utils.py
src/chroma/: __init__.py  chunks.py  deduplication.py  hierarchical_chunks.py  index_tracker.py  load_data.py  loader.py  metadata_extractor.py  stats.py  utils.py
src/data/: __init__.py  chunks.py  db.py  load.py  load_data.py  loader.py  retriever.py
src/database/: __init__.py  db.py  models.py  utils.py
src/database/migrations/: create_food_pairing_rules.py
src/database/repository/: __init__.py  bottle.py  food_pairing.py  producer.py  region.py  stats.py  sync_logs.py  tasting.py  wine.py
src/etl/: __init__.py  cellartracker_importer.py  import_cellartracker.py  import_vivino.py  test_cellartracker_import.py  utils.py  vivino_importer.py
src/model/: __init__.py  exceptions.py  keyword_agent.py  keyword_quickstart.py  llm.py  prompts.py  rag_main.py  wine_agent.py  wine_agent_quickstart.py
src/model/tools/: __init__.py  cellar_tools.py  pairing_tools.py  rag_tools.py  taste_profile_tools.py
src/rag/: __init__.py  bm25_search.py  chroma_stats.py  chunks.py  compression.py  deduplication.py  hybrid_retriever.py  index_tracker.py  load_data.py  loader.py  metadata_extractor.py  query_analyzer.py  quickstart.py  rag_quickstart.py  retriever.py  small_to_big.py  wine_terms.py
src/rag/data/: classifications.json  grape_synonyms.json  query_expansions.json
src/rag/query/: query_analyzer.py  query_utils.py
src/rag/retriever/: hybrid_retriever.py  keyword_search.py  reranker.py  retriever.py
src/rag/utils/: context_builder.py  metadata_extractor.py
src/retrieval/: __init__.py  context_builder.py  hybrid_retriever.py  query_compression.py  query_utils.py  rag_quickstart.py  vector_retriever.py
src/ui/: app.py  display.py  helper.py  resources.py  sidebar.py
src/ui/helper/: __init__.py  cellar_stats.py  display.py  taste_profile_stats.py
src/ui/pages/: cellar.py  chatbot.py  taste_profile.py
src/utils/: __init__.py  chroma.py  context_builder.py  env.py  logger.py  resources.py  terms.py  tracing.py  utils.py
tests/database/: test_bottle_repository.py
tests/model/tools/: test_rag_tools.py  (+7 more)
(+3 files in other folders)
