[project]
name = "wine-rag"
version = "0.1.0"
description = "Ask anything about wine"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.5",
    "huggingface-hub[hf-xet]>=0.30.2",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.0",
    "langchain-huggingface>=0.3.0",
    "langchain-chroma>=0.2.6",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "unstructured[all-docs,pdf]>=0.17.2",
    "streamlit>=1.50.0",
    "langfuse>=3.5.0",
    "numpy>=1.21.0,<2.0.0",
    "google-genai>=1.39.1",
    "jsonref",
    "cellartracker>=0.4.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0"
]



