[project]
name = "pour-decisions"
version = "0.2.0"
description = "Wine knowledge chatbot, cellar management, and taste profile analysis using LLMs."
readme = "README.md"
authors = [{ name = "Mihai Berbec", email = "berbec.mihaita@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.5",
    "huggingface-hub[hf-xet]>=0.30.2",
    "langchain>=1.1.3",
    "langchain-community>=0.3.29",
    "langchain-core>=1.1.3",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.0",
    "langchain-huggingface>=0.3.0",
    "langchain-chroma>=1.0.0",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=1.0.4",
    "langgraph-checkpoint>=3.0.1",
    "langgraph-prebuilt>=1.0.5",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "unstructured[all-docs,pdf]>=0.17.2",
    "streamlit>=1.50.0",
    "langfuse>=3.10.5",
    "langsmith>=0.4.30",
    "numpy>=1.21.0,<2.0.0",
    "google-genai>=1.39.1",
    "jsonref",
    "cellartracker>=0.4.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0"
]



