[project]
name = "pour-decisions"
version = "0.2.0"
description = "Wine knowledge chatbot, cellar management, and taste profile analysis using LLMs."
readme = "README.md"
authors = [{ name = "Mihai Berbec", email = "berbec.mihaita@gmail.com" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "cellartracker>=1.1.1",
    "chromadb>=1.3.7",
    "dotenv>=0.9.9",
    "instructor>=1.13.0",
    "langchain>=1.2.0",
    "langchain-core>=1.2.2",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "omegaconf>=2.3.0",
    "plotly>=6.5.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "torch==2.2.2; sys_platform == 'darwin'",
    "unstructured[all-docs,pdf]>=0.17.2",
]

[dependency-groups]
chroma = [
    "chromadb>=1.3.7",
    "dotenv>=0.9.9",
    "instructor>=1.13.0",
    "langchain-huggingface>=1.2.0",
    "numpy<2",
    "sentence-transformers>=5.2.0",
    "torch==2.2.2",
    "tqdm>=4.67.1",
    "unstructured[all-docs,pdf]>=0.18.21",
]
test = []

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

